# github-utils

./: LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: tg-notify.yml
github_utility/: cli.py
github_utils/: __init__.py  cli.py  github.py
tests/: test_github.py
